--- a/.github/workflows/doc-cov.yml
+++ b/.github/workflows/doc-cov.yml
@@ -20,5 +20,5 @@ jobs:
       - uses: actions/checkout@v3
       - uses: dtolnay/rust-toolchain@nightly
       - run: |
-          $env:RUSTDOCFLAGS="-Z unstable-options --show-coverage"
+          export RUSTDOCFLAGS="-Z unstable-options --show-coverage"
           cargo +nightly doc --workspace --all-features --no-deps
