--- a/.github/workflows/code-cov.yml
+++ b/.github/workflows/code-cov.yml
@@ -20,6 +20,4 @@ jobs:
       - uses: actions/checkout@v3
       - uses: dtolnay/rust-toolchain@nightly
       - run: |
-          export RUSTDOCFLAGS="-Z unstable-options --show-coverage"
-          percent=${cargo +nightly doc --workspace --all-features --no-deps --release | grep [0-9]*\.[0-9]+%\scoverage | grep [0-9]*\.[0-9]+)
-          echo "$percent < 99.0" | bc -l
+          cargo tarpaulin --release --workspace --all-features --include-tests
