--- a/.github/workflows/doc-cov.yml
+++ b/.github/workflows/doc-cov.yml
@@ -22,4 +22,4 @@ jobs:
       - run: |
           export RUSTDOCFLAGS="-Z unstable-options --show-coverage"
           percent=$(cargo +nightly doc --workspace --all-features --no-deps --release | grep [0-9]*\.[0-9]+%\scoverage | grep [0-9]*\.[0-9]+)
-          echo "$percent < 99.0" | bc -l
+          if [ $(echo "$percent < 99.0" | bc -l) ] then echo $percent "doc coverage"; exit 1; fi
