--- a/.github/workflows/code-cov.yml
+++ b/.github/workflows/code-cov.yml
@@ -21,4 +21,4 @@ jobs:
       - uses: dtolnay/rust-toolchain@nightly
       - run: |
           cargo install cargo-tarpaulin
-          cargo tarpaulin --release --workspace --all-features --include-tests
+          cargo tarpaulin --release --workspace --all-features --include-tests --engine=llvm --fail-under 95
