--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,11 +12,10 @@ categories = ["game-development", "algorithms"]
 exclude = [".github/", "crates/", "assets/"]
 
 [workspace]
-members = ["crates/*"]
+members = []
 
 # Centralised way of managing versions across all crates and packages
 [workspace.dependencies]
-example_crate = { path = "crates/example_crate" }
 bevy = { git = "https://github.com/bevyengine/bevy", rev = "e9312254d8906e9f491c4f3761659df0d179687f", default-features = false, features = [ "ktx2", "zstd" ] }
 petgraph = "0.6"
 serde = { version = "1", features = ["derive"] }
@@ -46,7 +45,6 @@ criterion = "0.5"
 bevy = { workspace = true, features = ["bevy_asset", "bevy_winit", "bevy_pbr", "bevy_gltf", "bevy_render", "bevy_sprite", "bevy_text", "bevy_ui", "png", "x11"] }
 
 [dependencies]
-example_crate = { workspace = true }
 bevy = { workspace = true }
 petgraph = { workspace = true }
 serde = { workpspace = true, optional = true}
