--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -19,7 +19,7 @@ jobs:
         run: sudo apt-get update; sudo apt-get -y install libasound2-dev libudev-dev lld
       - uses: actions/checkout@v3
       - uses: dtolnay/rust-toolchain@stable
-      - run: cargo test --release --workspace
+      - run: cargo test --release --workspace --all-features
   nix_build:
     name: nix_build
     runs-on: ubuntu-latest
@@ -35,7 +35,7 @@ jobs:
     steps:
       - uses: actions/checkout@v3
       - uses: dtolnay/rust-toolchain@stable
-      - run: cargo test --release --workspace
+      - run: cargo test --release --workspace --all-features
   win_build:
     name: win_build
     runs-on: windows-latest
@@ -52,7 +52,7 @@ jobs:
   #       run: brew install michaeleisel/zld/zld
   #     - uses: actions/checkout@v3
   #     - uses: dtolnay/rust-toolchain@stable
-  #     - run: cargo build --release --workspace
+  #     - run: cargo build --release --workspace --all-features
   # macos_build:
   #   name: macos_build
   #   runs-on: macos-latest
