--- a/.gitignore
+++ b/.gitignore
@@ -20,3 +20,7 @@ Cargo.lock
 
 # blender
 *.blend1
+
+# python generated cost fields
+assets/bench_costfields/maze/*
+assets/bench_costfields/sparse/*
