--- a/Cargo.toml
+++ b/Cargo.toml
@@ -36,7 +36,7 @@ repository.workspace = true
 keywords.workspace = true
 categories.workspace = true
 exclude.workspace = true
-publish = false
+publish = true
 
 [dev-dependencies]
 criterion = "0.5"
