--- a/cliff.toml
+++ b/cliff.toml
@@ -17,7 +17,8 @@ body = """
 {% for group, commits in commits | group_by(attribute="group") %}
     ### {{ group | upper_first }}
     {% for commit in commits %}
-        - {% if commit.breaking %}[**breaking**] {% endif %}{{ commit.message | upper_first }}\
+        - {% if commit.breaking %}[**breaking**] {% endif %}{{ commit.message | upper_first }}\n
+        {{ commit.body }}
     {% endfor %}
 {% endfor %}\n
 """
