rewrite portal graph

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,7 +19,6 @@ exclude = ["crates/examples_utils"]
 # Centralised way of managing versions across all crates and packages
 [workspace.dependencies]
 bevy = { version = "0.12", default-features = false }
-petgraph = "0.6"
 serde = { version = "1", features = ["derive"] }
 ron = { version = "0.8" }
 csv = { version = "1" }
@@ -54,7 +53,6 @@ rand = "0.8"
 
 [dependencies]
 bevy = { workspace = true }
-petgraph = { workspace = true }
 serde = { workspace = true, optional = true}
 ron = { workspace = true, optional = true}
 csv = { workspace = true, optional = true}
@@ -63,7 +61,7 @@ csv = { workspace = true, optional = true}
 workspace = true
 
 [features]
-serde = ["dep:serde", "petgraph/serde-1"]
+serde = ["dep:serde"]
 ron = ["serde", "dep:ron"]
 csv = ["serde", "dep:csv"]
 2d = []
