--- a/Cargo.toml
+++ b/Cargo.toml
@@ -66,7 +66,7 @@ ron = ["serde", "dep:ron"]
 csv = ["serde", "dep:csv"]
 2d = []
 3d = []
-multithread = []
+# multithread = []
 
 [package.metadata.docs.rs]
 features = ["serde", "ron", "csv", "2d", "3d"]
