--- a/Cargo.toml
+++ b/Cargo.toml
@@ -49,6 +49,7 @@ publish = true
 criterion = "0.5"
 bevy = { workspace = true, default-features = true }
 rand = "0.8"
+bevy_xpbd_2d = { version = "0.3", default-features = false, features = ["2d", "f32", "parallel", "debug-plugin"]} # used in 2d exmaples for collision detection
 # examples_utils = { path = "crates/examples_utils" }
 
 [dependencies]
