fix: fix code-coverage action (#53)

--- a/.github/workflows/code-cov.yml
+++ b/.github/workflows/code-cov.yml
@@ -18,7 +18,7 @@ jobs:
       - name: Nix dependencies
         run: sudo apt-get update; sudo apt-get -y install libasound2-dev libudev-dev lld
       - uses: actions/checkout@v3
-      - uses: dtolnay/rust-toolchain@nightly
+      - uses: dtolnay/rust-toolchain@stable
       - run: |
           cargo install cargo-tarpaulin
-          cargo tarpaulin --release --workspace --all-features --include-tests --engine=llvm --fail-under 85 --ignore-panics
+          cargo tarpaulin --profile codecov --workspace --all-features --include-tests --engine=llvm --fail-under 85 --ignore-panics
