--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,8 +13,6 @@ exclude = [".github/", "crates/", "assets/", "docs/png/", "justfile"]
 
 [workspace]
 members = ["crates/*"]
-exclude = ["crates/examples_utils"]
-
 
 # Centralised way of managing versions across all crates and packages
 [workspace.dependencies]
@@ -53,7 +51,7 @@ criterion = "0.5"
 bevy = { workspace = true, default-features = true, features=["wayland"]}
 rand = "0.8"
 avian2d = { version = "0.1", default-features = false, features = ["2d", "f32", "parry-f32", "default-collider", "parallel", "debug-plugin"]} # used in 2d exmaples for collision detection
-# examples_utils = { path = "crates/examples_utils" }
+examples_utils = { path = "crates/examples_utils" }
 
 [dependencies]
 bevy = { workspace = true, features = ["bevy_render", "wayland"] }
